# CarneadesIntoDung

./: .gitignore  CHANGELOG  CHANGELOG.md  CarneadesIntoDung.cabal  LICENSE  README.md  README.txt  ex.txt  examplecaes.txt  exex.txt
.github/workflows/: ci.yml
Language/CarneadesIntoDung/: Translation.hs
app/: Main.hs
src/: Main.hs
src/Language/CarneadesIntoDung/: Examples.hs  Translation.hs
test/: Main.hs
test/Test/Language/CarneadesIntoDung/: Translation.hs
