cabal-version: 3.0
name:          CarneadesIntoDung
version:       2.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Bas van Gijzel, Henrik Nilsson
maintainer:    Bas van Gijzel <nenekotan+git@gmail.com>
copyright:     Copyright (C) 2014-2026 Bas van Gijzel
stability:     experimental
category:      Argumentation, Embedded, AI
homepage:      https://github.com/nebasuke/CarneadesIntoDung
synopsis:      A translation from the Carneades argumentation model into Dung's AFs.
description:
  A translation from the Carneades argumentation model
  (<http://hackage.haskell.org/package/CarneadesDSL>) into Dung's
  argumentation frameworks (<http://hackage.haskell.org/package/Dung>).
  This package provides a translation function and correspondence
  properties. For the papers accompanying this library see "Towards a
  framework for the implementation and verification of translations
  between argumentation models" and "A principled approach to the
  implementation of argumentation models", available at
  <https://scholar.google.com/citations?user=Xu4yjvwAAAAJ&hl>.
build-type:    Simple
tested-with:   GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1

extra-doc-files:
  README.md
  CHANGELOG.md

extra-source-files:
  LICENSE
  examplecaes.txt
  exampleaf.txt

source-repository head
  type:     git
  location: https://github.com/nebasuke/CarneadesIntoDung

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  default-language: Haskell2010

library
  import:           warnings
  hs-source-dirs:   src
  build-depends:
    base         >= 4.16 && < 5,
    containers   >= 0.6  && < 0.8,
    fgl          >= 5.7  && < 5.9,
    CarneadesDSL >= 2.0  && < 2.1,
    Dung         >= 2.0  && < 2.1
  exposed-modules:
    Language.CarneadesIntoDung.Translation
    Language.CarneadesIntoDung.Examples

executable caell
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base                 >= 4.16 && < 5,
    CarneadesIntoDung,
    CarneadesDSL         >= 2.0  && < 2.1,
    Dung                 >= 2.0  && < 2.1,
    optparse-applicative >= 0.17 && < 0.19
  ghc-options:      -threaded

test-suite carneadesintodung-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base              >= 4.16 && < 5,
    CarneadesIntoDung,
    CarneadesDSL      >= 2.0  && < 2.1,
    Dung              >= 2.0  && < 2.1,
    containers        >= 0.6  && < 0.8,
    tasty             >= 1.4  && < 1.6,
    tasty-hunit       >= 0.10 && < 0.11
  other-modules:
    Test.Language.CarneadesIntoDung.Translation
